--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./src/images/icons/logo-f7862584.svg" alt="" />
       </div>
       <div class="flex justify-center item md:justify-end md:pr-[52px]">
-        <input id="location" class="cursor-pointer btnModal text-[10px] text-center flex w-32 h-10  rounded-l-lg shadow-sm/30" type="text" placeholder="Add location" >
+        <input id="location" class=" btnModal text-[10px] text-center flex w-32 h-10  rounded-l-lg shadow-sm/30" type="text" placeholder="Add location" >
         <input class="btnModal shadow-sm/30 text-[10px] text-center w-32  h-10" type="text" placeholder="Add guest">
         <button class="cursor-pointer shadow-sm/30 rounded-r-lg w-12 flex justify-center">
           <svg class="w-[18px]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke= "#eb5757" class="size-6">
@@ -25,7 +25,7 @@
     </header>
     <section>
       <div class="modalPadre bg-white fixed inset-0 hidden h-[90%] " >
-        <div class="relative">
+        <div class="absolute">
           <div class="flex justify-between p-8 items-center">
             <p class="text-[12px] font-semibold">Edit your search</p>
             <button id="closeModal" class="font-bold text-[20px]">X</button>
@@ -34,7 +34,7 @@
             <div class="md:flex-row flex flex-col justify-center items-center">
               <div class="shadow-sm/30 w-80 h-15 rounded-t-lg">
               <label class="p-[10px] text-[12px]" for="">location</label>
-              <input id="inputCiudad" class="px-[10px] border-none outline-none text-[10px] flex w-80 h-8" type="text"  >
+              <input id="inputCiudad" class="px-[10px] border-none outline-none text-[10px] flex w-80 h-8" type="text">
               
             </div>
             <div class="shadow-sm/30 w-80 h-15 rounded-b-lg">
