--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <section>
       <div class="modalPadre bg-white fixed inset-0 hidden h-[90%] " >
-        <div class="absolute">
+        <div>
           <div class="flex justify-between p-8 items-center">
             <p class="text-[12px] font-semibold">Edit your search</p>
             <button id="closeModal" class="font-bold text-[20px]">X</button>
