--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="./src/images/icons/logo-f7862584.svg" alt="" />
       </div>
       <div class="flex justify-center item md:justify-end md:pr-[52px]">
-        <input id="location" class=" btnModal text-[10px] text-center flex w-32 h-10  rounded-l-lg shadow-sm/30" type="text" placeholder="Add location" >
-        <input class="btnModal shadow-sm/30 text-[10px] text-center w-32  h-10" type="text" placeholder="Add guest">
+        <input id="location" class="block btnModal text-[10px] text-center flex w-32 h-10  rounded-l-lg shadow-sm/30" type="text" placeholder="Add location" >
+        <input class="btnModal block shadow-sm/30 text-[10px] text-center w-32  h-10" type="text" placeholder="Add guest">
         <button class="cursor-pointer shadow-sm/30 rounded-r-lg w-12 flex justify-center">
           <svg class="w-[18px]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke= "#eb5757" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
@@ -24,7 +24,7 @@
       </div>
     </header>
     <section>
-      <div class="modalPadre bg-white absolute inset-0 hidden h-[90%] " >
+      <div class="modalPadre bg-white fixed inset-0 hidden h-[90%] " >
         <div class="relative">
           <div class="flex justify-between p-8 items-center">
             <p class="text-[12px] font-semibold">Edit your search</p>
